test (image) : api 별 response 분리로 인한 테스트코드 수정