@@ -2,8 +2,9 @@ package com.backend.immilog.global.presentation.controller;
 
 import com.backend.immilog.image.application.service.ImageService;
 import com.backend.immilog.image.domain.enums.ImageType;
-import com.backend.immilog.image.presentation.request.ImageRequest;
+import com.backend.immilog.image.presentation.payload.ImageRequest;
 import com.backend.immilog.image.presentation.controller.ImageController;
+import com.backend.immilog.image.presentation.payload.ImageResponse;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.ResponseEntity;
@@ -32,12 +33,12 @@ class ImageControllerTest {
         when(imageService.saveFiles(files, imagePath, ImageType.POST))
                 .thenReturn(imageDTO);
         // when
-        ResponseEntity<ImageController.ImageResponse> response =
+        ResponseEntity<ImageResponse> response =
                 imageController.uploadImage(files, imagePath, ImageType.POST);
         // then
         assertThat(response.getStatusCode()).isEqualTo(OK);
         List<String> data = (List<String>) Objects.requireNonNull(response.getBody()).data();
-        assertThat(data.get(0)).isEqualTo("imageUrl");
+        assertThat(data.getFirst()).isEqualTo("imageUrl");
     }
 
     @Test
@@ -47,7 +48,7 @@ class ImageControllerTest {
         String imagePath = "imagePath";
         ImageRequest param = new ImageRequest("directory", imagePath);
         // when
-        ResponseEntity<ImageController.ImageResponse> response = imageController.deleteImage(param);
+        ResponseEntity<ImageResponse> response = imageController.deleteImage(param);
         // then
         verify(imageService, times(1)).deleteFile(imagePath);
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT);
